# inflearn-mlops-study

./: README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
scripts/: main.py
src/: ml_pipeline.py  mlops_config.py
src/config/: mlops_config.py
src/dataline/: data_handler.py
src/ml/: ml_pipeline.py
