[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlopstudy"
version = "0.0.1" 
authors = [
     { name="김준형", email="wnsgud4553@gmail.com" },
]
description = "A Machine Learning pipeline project focused on MLOps"
readme = "README.md"
dependencies = [
    "scikit-learn>=1.0",
    "pandas>=1.3",
    "numpy>=1.21",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
url = "https://github.com/AnalyzeGit/inflearn-mlops-study.git"

[tool.setuptools.packages.find]
where = ["src"]